objects/TimeLine_Fase_Inadimpl_ncia__c.object
<CustomObject>
    <fields>
        <fullName>Data_Fim__c</fullName>
        <label>Data Fim</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Inicio__c</fullName>
        <label>Data Início</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fase__c</fullName>
        <label>Fase</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inadimplencia__c</fullName>
        <label>Inadimplência</label>
        <referenceTo>TW1_Inadimplencia__c</referenceTo>
        <relationshipLabel>TimeLine Fase Inadimplência</relationshipLabel>
        <relationshipName>TimeLine_Fase_Inadimplencia</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TimeLine Fase Inadimplência</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TimeLine Fase Inadimplência Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TimeLine Fase Inadimplência</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>